--- a/index.css
+++ b/index.css
@@ -55,19 +55,19 @@
 
 @keyframes slider{
     0%{
-        background-image: url(/images/01.jpg);
+        background-image: url(images/01.jpg);
     }
     25%{
-        background-image: url(/images/headphone1.jpg);
+        background-image: url(images/headphone1.jpg);
     }
     50%{
-        background-image: url(/images/03.jpg);
+        background-image: url(images/03.jpg);
     }
     75%{
-        background-image: url(/images/02.jpg);
+        background-image: url(images/02.jpg);
     }
     100%{
-        background-image: url(/images/headphones.jpg);
+        background-image: url(images/headphones.jpg);
     }
 }
 
